--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
@@ -19,7 +20,8 @@
     "vite-plugin-md": "^0.22.5",
     "vue": "^3.3.0",
     "vue-i18n": "^9.14.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
