--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.0",
     "element-plus": "^2.4.0",
+    "express": "^4.18.2",
     "markdown-it": "^14.1.0",
     "markdown-it-table": "^4.1.1",
     "pinia": "^3.0.1",
     "vite-plugin-md": "^0.22.5",
     "vue": "^3.3.0",
     "vue-i18n": "^9.14.2",
-    "vue-router": "^4.2.0",
-    "express": "^4.18.2"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
